gap fixed

--- a/logo.css
+++ b/logo.css
@@ -163,7 +163,7 @@ h2 {
 .main-4{
   display: flex;
   align-items: center;
-  gap: 200px;
+  gap: 150px;
   margin-top: 100px;
 }
 
@@ -184,4 +184,8 @@ input, textarea {
 
 .border{
   border: 1px solid rgb(214, 221, 237);
+}
+
+footer{
+  background: white;
 }
